# grocery-prices

./: .gitignore  pyproject.toml  requirements.txt
src/prices/lib/: constants.py  database.py
src/prices/scrape/: aldi.py  cub.py  export.py  fresh_thyme.py  hyvee.py  main.py  notifications.py  prices.db  trader_joes.py  util.py
src/prices/web/: main.py
src/prices/web/templates/: base.html  index.html
src/prices/web/templates/bargains/: index.html
src/prices/web/templates/comparisons/: edit.html  index.html  new.html  show.html
src/prices/web/templates/price_history/: index.html
src/prices/web/templates/products/: index.html
